2009-01-04  Todd Zullinger  <tmzullinger at users.sourceforge.net>

	* po/zh_CN.po: Add simple Chinese translation (Tan Zhixin)

2008-12-31 Jorg Schuler <jcsjcs at users.sourceforge.net>

	* src/file.c
	  src/help.c
	  data/gtkpod.glade: string corrections -- thanks to Daniele Forsi.

2008-12-15 Jorg Schuler <jcsjcs at users.sourceforge.net>

	* po/es.po: Spanish translation updated -- thanks to Alejandro
	  Lamas Daviña

2008-12-17  Daniele Forsi <dforsi at users.sourceforge.net>

        * po/it.po: Italian translation updated

2008-12-16  Todd Zullinger  <tmzullinger at users.sourceforge.net>

	* src/misc_confirm.c: Fix typo in ok_to_close_gtkpod dialog

2008-12-15  Todd Zullinger  <tmzullinger at users.sourceforge.net>

	* data/man/gtkpod.1
	  src/prefs.c: Remove -a/--auto from usage output and manpage
	  These options were removed long ago in svn rev 1070.  Thanks
	  to Frank Lichtenheld (in Debian bug #466127).

2008-12-15 Jorg Schuler <jcsjcs at users.sourceforge.net>

	* po/he.po: Hebrew translation updated -- thanks to Assaf Gillat

2008-12-11 Jorg Schuler <jcsjcs at users.sourceforge.net>

	* po/sv.po: Swedish translation updated -- thanks to Stefan
	  Asserhäll

2008-12-09 Jorg Schuler <jcsjcs at users.sourceforge.net>

	* po/*: updated po files.

2008-12-07 Jorg Schuler <jcsjcs at users.sourceforge.net>

	* data/gtkpod.glade
	  src/display.c: Add an item to the View menu to show/hide the
	  filter bar (AKA: search bar)

	* src/display_tracks:
	  Fix a number of bugs relating to the filter bar. Thanks to
	  Andrea for the pointer.

	  Remove filter text when switching from one playlist to another:
	  leaving the filter in place immensely increases the time for display.

2008-11-08 Jorg Schuler <jcsjcs at users.sourceforge.net>

	* src/display_tracks.c
	  src/misc_track.c: use a toggle box to show the state of the
	  lyrics flag instead of 0/1.

	* src/display_tracks.c
	  src/misc_track.c
	  src/file.c
	  src/file.h
	  src/details.c