@@ -1,4 +1,4 @@
-.\" Automatically generated by Pod::Man v1.37, Pod::Parser v1.32
+.\" Automatically generated by Pod::Man 2.16 (Pod::Simple 3.07)
 .\"
 .\" Standard preamble:
 .\" ========================================================================
@@ -48,22 +48,25 @@
 .    ds R" ''
 'br\}
 .\"
+.\" Escape single quotes in literal strings from groff's Unicode transform.
+.ie \n(.g .ds Aq \(aq
+.el       .ds Aq '
+.\"
 .\" If the F register is turned on, we'll generate index entries on stderr for
 .\" titles (.TH), headers (.SH), subsections (.Sh), items (.Ip), and index
 .\" entries marked with X<> in POD.  Of course, you'll have to process the
 .\" output yourself in some meaningful fashion.
-.if \nF \{\
+.ie \nF \{\
 .    de IX
 .    tm Index:\\$1\t\\n%\t"\\$2"
 ..
 .    nr % 0
 .    rr F
 .\}
-.\"
-.\" For nroff, turn off justification.  Always turn off hyphenation; it makes
-.\" way too many mistakes in technical documents.
-.hy 0
-.if n .na
+.el \{\
+.    de IX
+..
+.\}
 .\"
 .\" Accent mark definitions (@(#)ms.acc 1.5 88/02/08 SMI; from UCB 4.2).
 .\" Fear.  Run.  Save yourself.  No user-serviceable parts.
@@ -129,12 +132,16 @@
 .\" ========================================================================
 .\"
 .IX Title "GTKPOD 1"
-.TH GTKPOD 1 "2007-12-21" "gtkpod 0.99.10" "gtkpod Manual"
+.TH GTKPOD 1 "2009-01-04" "gtkpod @VERSION@" "gtkpod Manual"
+.\" For nroff, turn off justification.  Always turn off hyphenation; it makes
+.\" way too many mistakes in technical documents.
+.if n .ad l
+.nh
 .SH "NAME"
 gtkpod \- GTK2 based software for managing songs and playlists on an Apple iPod
 .SH "SYNOPSIS"
 .IX Header "SYNOPSIS"
-\&\fBgtkpod\fR [\fB\-h\fR] [\fB\-a\fR] [\fB\-c\fR] [\fB\-o\fR] [\fB\-m\fR \fIpath\fR] [\fB\-p\fR \fIfilename\fR] [\fB\-\-hash\fR \fIfilename\fR] 
+\&\fBgtkpod\fR [\fB\-h\fR] [\fB\-m\fR \fIpath\fR] [\fB\-p\fR \fIfilename\fR] [\fB\-\-hash\fR \fIfilename\fR]
 .SH "DESCRIPTION"
 .IX Header "DESCRIPTION"
 This manual page briefly describes the gtkpod command.
@@ -167,7 +174,7 @@ starting gtkpod.
 .IX Item "~/.gtkpod/gtkpod.in"
 If this file exists, gtkpod will try to execute it at startup
 This is done before attempting to mount the iPod directory (optional)
-or read the iTunesDB (optional)).
+or read the iTunesDB (optional).
 .IP "\fI~/.gtkpod/gtkpod.out\fR" 4
 .IX Item "~/.gtkpod/gtkpod.out"
 If this file exists, gtkpod will try to execute it while exiting the
@@ -177,6 +184,23 @@ program. This is done after attempting to unmount the iPod directory
 .IX Item "/etc/gtkpod/gtkpod.in, /etc/gtkpod/gtkpod.out"
 Used instead of the per user scripts if the former ones don't exist
 and these do.
+.IP "\fI~/.gtkpod/gtkpod.load\fR" 4
+.IX Item "~/.gtkpod/gtkpod.load"
+If this file exists, gtkpod will execute it before loading the contents of
+an iPod with the iPod's mountpoint as the only command line argument. Put
+any commands needed to access the iPod here, for example if you need to
+mount the iPod manually.
+.IP "\fI~/.gtkpod/gtkpod.eject\fR" 4
+.IX Item "~/.gtkpod/gtkpod.eject"
+If this file exists, gtkpod will execute it when ejecting an iPod with the
+the iPod's mountpoint as the only command line argument. Put any commands
+you want to execute after gtkpod has written the changes to the iPod here.
+For example:
+.Sp
+sudo eject \f(CW$1\fR
+.Sp
+gtkpod will not attempt to do any magic of it's own to mount/unmount/eject
+the iPod.
 .SH "AUTHOR"
 .IX Header "AUTHOR"
 .Vb 4
@@ -186,13 +210,10 @@ and these do.
 \& and others
 .Ve
 .PP
-This manpage was written by Frank Lichtenheld <frank@lichtenheld>.
-.SH "COPYRIGHT AND LICENCE"
-.IX Header "COPYRIGHT AND LICENCE"
+This manpage was written by Frank Lichtenheld.
+.SH "COPYRIGHT AND LICENSE"
+.IX Header "COPYRIGHT AND LICENSE"
 This program is free software; you can redistribute it and/or modify
 it under the terms of the \s-1GNU\s0 General Public License as published by
 the Free Software Foundation; either version 2, or (at your option)
 any later version.
-.PP
-On Debian systems, a copy of the \s-1GNU\s0 General Public License may be
-found in /usr/share/common\-licenses/GPL.
